# MEDIPREDICTION

./: MODEL.IPYNB  README.md  medical copy.py  medical.py  model.pkl  model_training.ipynb  pyproject.toml
